--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -326,6 +326,7 @@ body,
   max-width: 50%;
   transition: all 0.3s ease-in-out;
   flex: auto;
+  color: black;
 }
 .custom-accordian .button:focus {
   border: none !important;
@@ -1929,7 +1930,7 @@ body,
 .picker-field {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 2px;
 }
 
 .picker-label {
