feat: Refactor DateTimePicker and QuantitySelector components; improve user feedback with alerts and modals

--- a/src/components/QuantitySelector/QuantitySelector.css
+++ b/src/components/QuantitySelector/QuantitySelector.css
@@ -73,7 +73,7 @@
 }
 
 .quantity-btn:hover:not(:disabled) {
-  background-color: rgba(255, 255, 255, 0.1);
+  /* background-color: rgba(255, 255, 255, 0.1); */
   transform: scale(1.05);
 }
 
