--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -177,7 +177,7 @@ body,
   flex-shrink: 0;
 }
 .product-detail .review-info .left .text {
-  font-size: 13px;
+  font-size: 14px;
   color: var(--bs-body-color);
   margin-bottom: 0px;
 }
@@ -328,7 +328,7 @@ body,
 .custom-accordian .button {
   border: none;
   background-color: transparent;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
   padding: 10px;
   border-radius: 67px;
@@ -473,7 +473,7 @@ body,
   gap: 7px;
 }
 .reviews-list .review-item .header .profile .data .date {
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 500;
   color: #616161;
   line-height: 1;
@@ -1076,16 +1076,17 @@ body,
   object-fit: cover;
 }
 .menu-listing .menu-list .left .data .title {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   text-align: left;
   margin-bottom: 4px;
   color: var(--bs-body-color);
 }
 .menu-listing .menu-list .left .data .text {
-  font-size: 11px;
+  font-size: 13px;
   font-weight: 400;
   text-align: left;
+  line-height: 1.3;
   margin-bottom: 4px;
   color: #7e8ca0;
   display: -webkit-box;
@@ -1096,7 +1097,7 @@ body,
   text-overflow: ellipsis;
 }
 .menu-listing .menu-list .left .data .price {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
   text-align: left;
   color: #3fc045;
