--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -218,7 +218,7 @@ body,
   align-items: center;
 }
 .quantity-warpper .price {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
   color: var(--bs-body-color);
   padding-left: 4px;
@@ -1385,7 +1385,7 @@ body,
 .pickup-details {
   text-align: right;
   flex-shrink: 0;
-  margin-left: 16px;
+
   min-width: 120px;
 }
 
@@ -1951,6 +1951,7 @@ body,
   display: flex;
   flex-direction: column;
   gap: 2px;
+  align-items: flex-start;
 }
 
 .picker-label {
