--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -500,6 +500,7 @@ body,
 }
 .add-to-cart-action {
   display: flex;
+  flex-direction: column;
   align-items: center;
   max-width: 340px;
   width: 100%;
