feat: enhance DateTimePicker and ListingPage with cart integration and pickup data initialization

--- a/src/components/DateTimePicker/DateTimePicker.css
+++ b/src/components/DateTimePicker/DateTimePicker.css
@@ -426,7 +426,6 @@ ld {
   min-height: 20px;
 }
 .date-time-picker[data-order-type="PRE_ORDER"] .date-input-wrapper::before {
-  content: "📅";
   position: absolute;
   left: 4px;
   top: 50%;
@@ -610,8 +609,8 @@ ld {
 
 /* Quick Date Selection */
 .mobile-quick-dates {
-  border-top: 1px solid #e5e5e5;
-  padding-top: 20px;
+  /* border-top: 1px solid #e5e5e5; */
+  /* padding-top: 20px; */
 }
 
 .mobile-quick-dates h5 {
