--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1951,6 +1951,7 @@ body,
 .picker-field {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 2px;
   align-items: flex-start;
 }
