--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1084,7 +1084,7 @@ body,
   color: var(--bs-body-color);
 }
 .menu-listing .menu-list .left .data .text {
-  font-size: 13px;
+  /* font-size: 13px;
   font-weight: 400;
   text-align: left;
   line-height: 1.3;
@@ -1095,8 +1095,19 @@ body,
   line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; */
+    font-size: 13px;
+    font-weight: 400;
+    text-align: left;
+    line-height: 1.3;
+    margin-bottom: 4px;
+    color: #7e8ca0;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    word-break: break-word;
 }
+
 .menu-listing .menu-list .left .data .price {
   font-size: 14px;
   font-weight: bold;
